# nheko

./: .cirrus.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .qmlformat.ini  .qmllint.ini  .travis.yml  AppImageBuilder.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  COPYING  Dockerfile  Dockerfile.debian  Makefile  README.md  appveyor.yml  azure-pipelines.yml  blurhash.cpp  blurhash.hpp  blurhash2bmp.cpp  default.nix  im.nheko.Nheko.yaml  image2blurhash.cpp  io.github.NhekoReborn.Nheko.json  io.github.NhekoReborn.Nheko.yaml  meson.build  meson_options.txt  nheko-backtrace.dump  nheko-nightly.flatpakref  nheko-nightly.flatpakrepo  package.nix  requirements.txt  toolchain.cmake
.ci/: azure-build.yml  bintray-release.json  format.sh  install.sh  licenses.sh  linux.sh  script.sh  update-github-release.sh  upload-nightly-gitlab.sh  upload-nightly.ps  upload-nightly.ps1  upload-nightly.sh
.ci/gcc-9/: Dockerfile
.ci/linux/: create-packages.sh  deploy.sh  gtest.sh  install-deps.sh  run-tests.sh
.ci/macos/: Brewfile  build.sh  bundle-gstreamer.sh  deploy.sh  notarize.sh  settings.json
.ci/windows/: build-meson.cmd  build.bat  deploy-meson.cmd  gst-qt6d3d11-CMakeLists.txt  nheko.nsi  sign.bat
.github/: CONTRIBUTING  CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: build.yml
android/: AndroidManifest.xml
aqt/: settings.ini
cmake/: CompilerFlags.cmake  Doxyfile.in  FindLMDB.cmake  FindOlm.cmake  Findcmark.cmake  HunterGate.cmake  LMDB.cmake  LMDBXX.cmake  MacOSXBundleInfo.plist.in  MatrixStructs.cmake  QtCommon.cmake  Translations.cmake  Tweeny.cmake  cmake_uninstall.cmake.in  nheko.entitlements  nheko.h  version.hpp
cmake/Hunter/: config.cmake
deploy/installer/: config.xml  controlscript.qs  uninstall.qs
forms/: ChatPage.ui  MainWindow.ui  RoomList.ui
include/: AvatarProvider.h  Cache.h  ChatPage.h  CommunitiesList.h  CommunitiesListItem.h  Community.h  Config.h  Deserializable.h  EmojiCategory.h  EmojiItemDelegate.h  EmojiPanel.h  EmojiPickButton.h  EmojiProvider.h  FileItem.h  HistoryView.h  HistoryViewItem.h  HistoryViewManager.h  ImageItem.h  ImageOverlayDialog.h  InputValidator.h  JoinRoomDialog.h  LeaveRoomDialog.h  Logging.hpp  Login.h  LoginPage.h  LoginSettings.h  LogoutDialog.h  MainWindow.h  MatrixClient.h  Olm.hpp  Profile.h  QuickSwitcher.h  Register.h  RegisterPage.h  RoomInfo.h  RoomInfoListItem.h  RoomList.h  RoomMessages.h  RoomSettings.h  RoomState.h  (+16 more)
include/dialogs/: CreateRoom.h  ImageOverlay.h  InviteUsers.h  JoinRoom.h  Logout.h  LogoutDialog.h  MemberList.hpp  PreviewImageOverlay.h  PreviewUploadOverlay.h  ReCaptcha.hpp  ReadReceipts.h  RoomSettings.hpp
include/emoji/: Category.h  EmojiCategory.h  EmojiProvider.h  ItemDelegate.h  Panel.h  PickButton.h  Provider.h
include/events/: AliasesEventContent.h  AvatarEventContent.h  CanonicalAliasEventContent.h  CreateEventContent.h  Event.h  HistoryVisibilityEventContent.h  JoinRulesEventContent.h  MemberEventContent.h  MessageEvent.h  MessageEventContent.h  NameEventContent.h  PowerLevelsEventContent.h  RoomEvent.h  StateEvent.h  TopicEventContent.h
include/notifications/: Manager.h
include/timeline/: TimelineItem.h  TimelineView.h  TimelineViewManager.h
include/ui/: Avatar.h  Badge.h  CircularProgress.h  DropShadow.h  FlatButton.h  FloatingButton.h  InfoMessage.hpp  Label.h  LoadingIndicator.h  Menu.h  OverlayModal.h  OverlayWidget.h  Painter.h  RaisedButton.h  Ripple.h  RippleOverlay.h  ScrollBar.h  SnackBar.h  TextField.h  Theme.h  ThemeManager.h  ToggleButton.h
includes/: jdenticoninterface.h
man/: CMakeLists.txt  nheko.1.adoc  nheko.1.adoc.in
meson/: MacOSXBundleInfo.plist.in  nheko.h  version.h
qml/: Avatar.qml  ChatPage.qml  CommunitiesList.qml  Completer.qml  ElidedLabel.qml  EncryptionIndicator.qml  ForwardCompleter.qml  ImageButton.qml  MatrixText.qml  MatrixTextField.qml  MessageInput.qml  MessageView.qml  NhekoBusyIndicator.qml  NotificationWarning.qml  PrivacyScreen.qml  QuickSwitcher.qml  Reactions.qml  ReplyPopup.qml  RoomList.qml  Root.qml  SelfVerificationCheck.qml  StatusIndicator.qml  TimelineRow.qml  TimelineView.qml  ToggleButton.qml  TopBar.qml  TypingIndicator.qml  UploadBox.qml
qml/components/: AdaptiveLayout.qml  AdaptiveLayoutElement.qml  AvatarListTile.qml  FlatButton.qml  MainWindowDialog.qml  (+1 more)
resources/: AppxManifest.xml  Nheko.appinstaller  NhekoNightly.appinstaller  _nheko  emoji-test.txt  emoji.json  extra_emoji.txt  nheko.appdata.xml  nheko.appdata.xml.in  nheko.desktop  nheko.desktop.in  nheko.icns  provider-head.txt  provider-header.txt  qtquickcontrols2.conf  res.qrc  shortcodes.txt
scripts/: archive.sh  codegen.sh  emoji_codegen.py  flat-manager-client  generate_icns.sh  includemocs.py  update_emoji.md  upload-to-flatpak-repo.sh
snap/: snapcraft.yaml
src/: ActiveCallBar.cpp  ActiveCallBar.h  AliasEditModel.cpp  AliasEditModel.h  AvatarProvider.cc  AvatarProvider.cpp  AvatarProvider.h  BlurhashProvider.cpp  BlurhashProvider.h  Cache.cc  Cache.cpp  Cache.h  CacheCryptoStructs.cpp  CacheCryptoStructs.h  CacheStructs.h  Cache_p.h  CallDevices.cpp  CallDevices.h  CallManager.cpp  CallManager.h  ChatPage.cc  ChatPage.cpp  ChatPage.h  Clipboard.cpp  Clipboard.h  ColorImageProvider.cpp  ColorImageProvider.h  CombinedImagePackModel.cpp  CombinedImagePackModel.h  CommandCompleter.cpp  CommandCompleter.h  CommunitiesList.cc  CommunitiesList.cpp  CommunitiesList.h  CommunitiesListItem.cc  CommunitiesListItem.cpp  CommunitiesListItem.h  Community.cc  CompletionModel.h  CompletionModelRoles.h  (+141 more)
subprojects/: QtKeychain.wrap  cmark.wrap  libsecret.wrap  lmdb++.wrap  lmdb.wrap  spdlog.wrap  wintoast.wrap
subprojects/SingleApplication-3.3.0/: CHANGELOG.md  meson.build  singleapplication.h
subprojects/packagefiles/cmark/: cmark_export.h.in  meson.build
subprojects/packagefiles/lmdb/: meson.build
subprojects/packagefiles/wintoast/: meson.build
tests/: event_collection.cc  events.cc  message_events.cc
(+559 files in other folders)
